tests/snapshots/python_parity_unit_snapshots__nft_rules_full_host.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: rules.host_rules
---
# generated by ghars apply — DO NOT EDIT
# runner=buckos netns=ghars-buckos veth=ghars-buckos-h
# subnet=10.200.0.0/30

table inet ghars_buckos {
    chain output_filter {
        ct state established,related accept
        meta l4proto icmp icmp type destination-unreachable icmp code frag-needed accept
        ip daddr 192.168.2.84 tcp dport 3128 accept comment "squid proxy"
        ip daddr 10.0.0.1 tcp dport { 80, 443 } accept
        ip daddr 10.0.0.2 tcp dport 1024-2048 accept
        ip daddr 1.1.1.1 tcp dport 53 accept comment "DoT/DoH upstream"
        ip daddr 1.1.1.1 udp dport 53 accept comment "DoT/DoH upstream"
        log prefix "ghars-buckos drop: " level info
        drop
    }
    chain forward {
        type filter hook forward priority filter
        iifname "ghars-buckos-h" jump output_filter
        oifname "ghars-buckos-h" tcp flags syn / syn,rst tcp option maxseg size set rt mtu
        iifname "ghars-buckos-h" tcp flags syn / syn,rst tcp option maxseg size set rt mtu
    }
    chain postroute {
        type nat hook postrouting priority srcnat
        ip saddr 10.200.0.0/30 oifname != "ghars-buckos-*" masquerade
    }
}
