tests/snapshots/python_parity_unit_snapshots__nft_rules_full_ns.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: rules.ns_rules
---
# generated by ghars apply — DO NOT EDIT
# runner=buckos namespace=ghars-buckos

table inet ghars_buckos_ns {
    chain output_filter {
        ct state established,related accept
        oifname "lo" accept
        meta l4proto icmp icmp type destination-unreachable icmp code frag-needed accept
        ip daddr 10.200.0.1 udp dport 53 accept comment "ghars dns auto-allow"
        ip daddr 10.200.0.1 tcp dport 53 accept comment "ghars dns auto-allow"
        ip daddr 192.168.2.84 tcp dport 3128 accept comment "squid proxy"
        ip daddr 10.0.0.1 tcp dport { 80, 443 } accept
        ip daddr 10.0.0.2 tcp dport 1024-2048 accept
        ip daddr 1.1.1.1 tcp dport 53 accept comment "DoT/DoH upstream"
        ip daddr 1.1.1.1 udp dport 53 accept comment "DoT/DoH upstream"
        log prefix "ghars-buckos ns-drop: " level info
        drop
    }
    chain output {
        type filter hook output priority filter
        jump output_filter
    }
    chain input {
        type filter hook input priority filter
        ct state established,related accept
        iifname "lo" accept
        iifname "ghars-buckos-r" accept
        log prefix "ghars-buckos ns-in-drop: " level info
        drop
    }
}
