tests/snapshots/python_parity_unit_snapshots__nft_rules_minimal_host.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: rules.host_rules
---
# generated by ghars apply — DO NOT EDIT
# runner=buckos netns=ghars-buckos veth=ghars-buckos-h
# subnet=10.200.0.0/30

table inet ghars_buckos {
    chain output_filter {
        ct state established,related accept
        meta l4proto icmp icmp type destination-unreachable icmp code frag-needed accept
        ip daddr 192.168.2.84 tcp dport 3128 accept comment "squid proxy"
        log prefix "ghars-buckos drop: " level info
        drop
    }
    chain forward {
        type filter hook forward priority filter
        iifname "ghars-buckos-h" jump output_filter
        oifname "ghars-buckos-h" tcp flags syn / syn,rst tcp option maxseg size set rt mtu
        iifname "ghars-buckos-h" tcp flags syn / syn,rst tcp option maxseg size set rt mtu
    }
    chain postroute {
        type nat hook postrouting priority srcnat
        ip saddr 10.200.0.0/30 oifname != "ghars-buckos-*" masquerade
    }
}
