tests/snapshots/python_parity_unit_snapshots__nft_rules_minimal_ns.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: rules.ns_rules
---
# generated by ghars apply — DO NOT EDIT
# runner=buckos namespace=ghars-buckos

table inet ghars_buckos_ns {
    chain output_filter {
        ct state established,related accept
        oifname "lo" accept
        meta l4proto icmp icmp type destination-unreachable icmp code frag-needed accept
        ip daddr 192.168.2.84 tcp dport 3128 accept comment "squid proxy"
        log prefix "ghars-buckos ns-drop: " level info
        drop
    }
    chain output {
        type filter hook output priority filter
        jump output_filter
    }
    chain input {
        type filter hook input priority filter
        ct state established,related accept
        iifname "lo" accept
        iifname "ghars-buckos-r" accept
        log prefix "ghars-buckos ns-in-drop: " level info
        drop
    }
}
