tests/snapshots/python_parity_unit_snapshots__nft_rules_non_default_runner_name_host.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: rules.host_rules
---
# generated by ghars apply — DO NOT EDIT
# runner=wkr-2 netns=ghars-wkr-2 veth=ghars-wkr-2-h
# subnet=10.200.0.0/30

table inet ghars_wkr-2 {
    chain output_filter {
        ct state established,related accept
        meta l4proto icmp icmp type destination-unreachable icmp code frag-needed accept
        ip daddr 10.200.0.1 udp dport 53 accept comment "ghars dns auto-allow"
        ip daddr 10.200.0.1 tcp dport 53 accept comment "ghars dns auto-allow"
        log prefix "ghars-wkr-2 drop: " level info
        drop
    }
    chain forward {
        type filter hook forward priority filter
        iifname "ghars-wkr-2-h" jump output_filter
        oifname "ghars-wkr-2-h" tcp flags syn / syn,rst tcp option maxseg size set rt mtu
        iifname "ghars-wkr-2-h" tcp flags syn / syn,rst tcp option maxseg size set rt mtu
    }
    chain postroute {
        type nat hook postrouting priority srcnat
        ip saddr 10.200.0.0/30 oifname != "ghars-wkr-2-*" masquerade
    }
}
