tests/snapshots/python_parity_unit_snapshots__nft_rules_non_default_runner_name_ns.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: rules.ns_rules
---
# generated by ghars apply — DO NOT EDIT
# runner=wkr-2 namespace=ghars-wkr-2

table inet ghars_wkr-2_ns {
    chain output_filter {
        ct state established,related accept
        oifname "lo" accept
        meta l4proto icmp icmp type destination-unreachable icmp code frag-needed accept
        ip daddr 10.200.0.1 udp dport 53 accept comment "ghars dns auto-allow"
        ip daddr 10.200.0.1 tcp dport 53 accept comment "ghars dns auto-allow"
        log prefix "ghars-wkr-2 ns-drop: " level info
        drop
    }
    chain output {
        type filter hook output priority filter
        jump output_filter
    }
    chain input {
        type filter hook input priority filter
        ct state established,related accept
        iifname "lo" accept
        iifname "ghars-wkr-2-r" accept
        log prefix "ghars-wkr-2 ns-in-drop: " level info
        drop
    }
}
